# ready-set-boole

./: .gitignore  CHANGELOG.md  LICENSE  README.lhs  ready-set-boole.cabal
.github/workflows/: haskell.yml
src/: Bitwise.hs  Boolean.hs  Curves.hs  Sets.hs
test/: Spec.hs
