cabal-version:      3.0
name:               ready-set-boole
version:            0.1.0.0
synopsis:           Introduction to Boolean Algebra (42 Project)
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             César de la Rosa
maintainer:         code@cesardelarosa.xyz
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable ready-set-boole
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0,
        ready-set-boole

    hs-source-dirs:   app
    default-language: Haskell2010
